iota.log
*** Error compiling 'iota/components/iota_cctbx_ha14.py'...
  File "iota/components/iota_cctbx_ha14.py", line 539
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_processing.py'...
  File "iota/components/iota_processing.py", line 222
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_threads.py'...
  File "iota/components/iota_threads.py", line 916
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_utils.py'...
  File "iota/components/iota_utils.py", line 731
    except Exception, e:
                    ^
SyntaxError: invalid syntax

